fix navbar on small screens

--- a/website/styles/components/_header.sass
+++ b/website/styles/components/_header.sass
@@ -11,3 +11,6 @@
 
 .logo-title
   font-size: 2rem
+
+  @include respond-to(extra-small-only)
+    text-align: center
